# STM32_f103c8t6_TMC5160-EVAL

./: .cproject  .project  CMakeLists.txt  README.md  f103_5160EVAL Debug.launch  f103_5160EVAL.ioc
Core/Inc/: main.h
Core/Src/: main.c
Debug/: f103_5160EVAL.elf  f103_5160EVAL.list  f103_5160EVAL.map  makefile
Debug/Core/Src/: main.cyclo  main.su
cmake/: gcc-arm-none-eabi.cmake
